parser.js
// @generated by Peggy 5.1.0.
//
// https://peggyjs.org/




function make_constructor(name, ...args) {
	if (args === null || args.length == 0) {
    	return name;
    }
	return name + '(' + args.join(",") + ')';
}

function make_list(...args) {
	return '[' + args.join(',') + ']';
}

function is_upper(c) {
	return c == c.toUpperCase() && c != c.toLowerCase();
}

function make_sort(universe) {
  return 'usort(' + universe + ')';
}

function make_uni_const(level) {
  return 'uconst(' + level + ')';
}

function make_ground_id(id) {
  let suffix = "";
  if (is_upper(id[0])) {
    suffix = "_upper";
  } else {
    suffix = "_lower";
  }
  return id.toLowerCase() + suffix;
}

let yy_meta_counter = 0;

class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message);
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";
  }

  format(sources) {
    let str = "Error: " + this.message;
    if (this.location) {
      let src = null;
      const st = sources.find(s => s.source === this.location.source);
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g);
      }
      const s = this.location.start;
      const offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
        ? this.location.source.offset(s)
        : s;
      const loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
      if (src) {
        const e = this.location.end;
        const filler = "".padEnd(offset_s.line.toString().length, " ");
        const line = src[s.line - 1];
        const last = s.line === e.line ? e.column : line.length + 1;
        const hatLen = (last - s.column) || 1;
        str += "\n --> " + loc + "\n"
            + filler + " |\n"
            + offset_s.line + " | " + line + "\n"
            + filler + " | " + "".padEnd(s.column - 1, " ")
            + "".padEnd(hatLen, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase();
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, "unicode")
      ? new RegExp("[\\p{C}\\p{Mn}\\p{Mc}]", "gu")
      : null;
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable,  ch => "\\u{" + hex(ch) + "}");
      }
      return s;
    }

    function literalEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    function classEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map(
          part => (Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part))
        );

        return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]" + (expectation.unicode ? "u" : "");
      },

      any() {
        return "any character";
      },

      end() {
        return "end of input";
      },

      other(expectation) {
        return expectation.description;
      },
    };

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation);
      descriptions.sort();

      if (descriptions.length > 0) {
        let j = 1;
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions = {
    Module: peg$parseModule,
  };
  let peg$startRuleFunction = peg$parseModule;

  const peg$c0 = "\n";
  const peg$c1 = "axiom";
  const peg$c2 = ":";
  const peg$c3 = "def";
  const peg$c4 = ":=";
  const peg$c5 = "inductive";
  const peg$c6 = "where";
  const peg$c7 = "struct";
  const peg$c8 = ".{";
  const peg$c9 = "}";
  const peg$c10 = ",";
  const peg$c11 = "(";
  const peg$c12 = ")";
  const peg$c13 = "|";
  const peg$c14 = ".";
  const peg$c15 = "match";
  const peg$c16 = "with";
  const peg$c17 = "=>";
  const peg$c18 = "()";
  const peg$c19 = "_";
  const peg$c20 = "->";
  const peg$c21 = " ";
  const peg$c22 = "Sort";
  const peg$c23 = "Type";
  const peg$c24 = "Prop";
  const peg$c25 = "max(";
  const peg$c26 = "+";
  const peg$c27 = "let";

  const peg$r0 = /^[a-zA-Z]/;
  const peg$r1 = /^[a-z_]/;
  const peg$r2 = /^[a-z]/;
  const peg$r3 = /^[0-9]/;
  const peg$r4 = /^[ \t\n\r]/;

  const peg$e0 = peg$literalExpectation("\n", false);
  const peg$e1 = peg$literalExpectation("axiom", false);
  const peg$e2 = peg$literalExpectation(":", false);
  const peg$e3 = peg$literalExpectation("def", false);
  const peg$e4 = peg$literalExpectation(":=", false);
  const peg$e5 = peg$literalExpectation("inductive", false);
  const peg$e6 = peg$literalExpectation("where", false);
  const peg$e7 = peg$literalExpectation("struct", false);
  const peg$e8 = peg$literalExpectation(".{", false);
  const peg$e9 = peg$literalExpectation("}", false);
  const peg$e10 = peg$literalExpectation(",", false);
  const peg$e11 = peg$literalExpectation("(", false);
  const peg$e12 = peg$literalExpectation(")", false);
  const peg$e13 = peg$literalExpectation("|", false);
  const peg$e14 = peg$literalExpectation(".", false);
  const peg$e15 = peg$literalExpectation("match", false);
  const peg$e16 = peg$literalExpectation("with", false);
  const peg$e17 = peg$literalExpectation("=>", false);
  const peg$e18 = peg$literalExpectation("()", false);
  const peg$e19 = peg$literalExpectation("_", false);
  const peg$e20 = peg$literalExpectation("->", false);
  const peg$e21 = peg$literalExpectation(" ", false);
  const peg$e22 = peg$literalExpectation("Sort", false);
  const peg$e23 = peg$literalExpectation("Type", false);
  const peg$e24 = peg$literalExpectation("Prop", false);
  const peg$e25 = peg$literalExpectation("max(", false);
  const peg$e26 = peg$literalExpectation("+", false);
  const peg$e27 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false, false);
  const peg$e28 = peg$classExpectation([["a", "z"], "_"], false, false, false);
  const peg$e29 = peg$literalExpectation("let", false);
  const peg$e30 = peg$classExpectation([["a", "z"]], false, false, false);
  const peg$e31 = peg$classExpectation([["0", "9"]], false, false, false);
  const peg$e32 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false, false);

  function peg$f0(head, tail) {    return [head, ...tail.map(x => x[1])];  }
  function peg$f1(name, uni_params, type) {    return make_constructor('axiom', name, make_list(uni_params), type);  }
  function peg$f2(name, uni_params, params, type, body) {    return make_constructor('def', name, make_list(uni_params), make_list(params), type, body);  }
  function peg$f3(name, uni_params, params, type, constructors) {    return make_constructor("inductive", name, make_list(uni_params), make_list(params), type, make_list(constructors));  }
  function peg$f4(name, uni_params, params, type, fields) {    return make_constructor("struct", name, make_list(uni_params), make_list(params), type, make_list(fields));  }
  function peg$f5(head, tail) {    return [head].concat(tail);  }
  function peg$f6(param) {    return param;  }
  function peg$f7(params) {    return params;  }
  function peg$f8(name, type) {    return make_constructor("parameter", name, type);  }
  function peg$f9(name, type) {    return make_constructor("constructor", name, type);  }
  function peg$f10(name, type) {    return make_constructor("field", name, type);  }
  function peg$f11(head, tail) {
    	return tail.reduce(
        	(proj, field) => make_constructor("proj", proj, field[1]),
          head
        );
  }
  function peg$f12(term, arms) {    return make_constructor("match", term, make_list(arms));  }
  function peg$f13(pattern, body) {    return make_constructor("match.arm", pattern, body);  }
  function peg$f14(name, args) {    return make_constructor("pattern.constructor", name, make_list(args));  }
  function peg$f15(name) {    return make_constructor("pattern.constructor", name, make_list());  }
  function peg$f16(x) {
    	if (is_upper(x[0])) {
        	return make_constructor("pattern.var", x);
        } else {
        	return make_constructor("pattern.constructor", x, make_list());
        }
  }
  function peg$f17() {    return make_constructor("pattern.wildcard");  }
  function peg$f18(head, tail) {    return [head] + "," + tail;  }
  function peg$f19(x) {    return make_constructor("pattern.var", x);  }
  function peg$f20() {    return make_constructor("pattern.wildcard");  }
  function peg$f21(domain, codomain) {    
       	//let fresh_meta = "M_" + yy_meta_counter
       	//yy_meta_counter += 1
       	//return make_constructor("pi", fresh_meta, domain, codomain); 
         return make_constructor("pi", make_constructor("var", "_"), domain, codomain); // TODO
  }
  function peg$f22(x, type, body) {    return make_constructor("pi", x, type, body);  }
  function peg$f23(head, tail) {
    	return tail.reduce(
        	(fun, arg) => make_constructor("app", fun, arg[1]),
          head
        );
  }
  function peg$f24(x) {    return make_constructor("var", x);  }
  function peg$f25(level) {    return make_sort(level);  }
  function peg$f26() {    return make_sort(make_uni_const(1));  }
  function peg$f27(n) {
    	if (n === null) {
        	return make_sort(make_uni_const(1));
        }
        return make_sort(make_uni_const(n + 1));
  }
  function peg$f28() {    return make_sort(make_uni_const(0));  }
  function peg$f29(term) {    return term;  }
  function peg$f30(u, v) {    return make_constructor("umax", u, v);  }
  function peg$f31(u, n) {    return make_constructor("uadd", u, n);  }
  function peg$f32(n) {    return make_uni_const(n);  }
  function peg$f33(x) {    return make_constructor("uvar", x);  }
  function peg$f34(u) {    return u;  }
  function peg$f35(name) {    return '"' + make_ground_id(name) + '"';  }
  function peg$f36() {    return text();  }
  function peg$f37() {    return parseInt(text(), 10);  }
  let peg$currPos = options.peg$currPos | 0;
  let peg$savedPos = peg$currPos;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = peg$currPos;
  let peg$maxFailExpected = options.peg$maxFailExpected || [];
  let peg$silentFails = options.peg$silentFails | 0;

  let peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos);
    if (cp === undefined) {
      return "";
    }
    return String.fromCodePoint(cp);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text, ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: "class", parts, inverted, ignoreCase, unicode };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseModule() {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseDeclaration();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = [];
      if (input.charCodeAt(peg$currPos) === 10) {
        s5 = peg$c0;
        peg$currPos++;
      } else {
        s5 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e0); }
      }
      if (s5 !== peg$FAILED) {
        while (s5 !== peg$FAILED) {
          s4.push(s5);
          if (input.charCodeAt(peg$currPos) === 10) {
            s5 = peg$c0;
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e0); }
          }
        }
      } else {
        s4 = peg$FAILED;
      }
      if (s4 !== peg$FAILED) {
        s5 = peg$parseDeclaration();
        if (s5 !== peg$FAILED) {
          s4 = [s4, s5];
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = [];
        if (input.charCodeAt(peg$currPos) === 10) {
          s5 = peg$c0;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e0); }
        }
        if (s5 !== peg$FAILED) {
          while (s5 !== peg$FAILED) {
            s4.push(s5);
            if (input.charCodeAt(peg$currPos) === 10) {
              s5 = peg$c0;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e0); }
            }
          }
        } else {
          s4 = peg$FAILED;
        }
        if (s4 !== peg$FAILED) {
          s5 = peg$parseDeclaration();
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      s3 = peg$parse_();
      peg$savedPos = s0;
      s0 = peg$f0(s1, s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseDeclaration() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 5) === peg$c1) {
      s1 = peg$c1;
      peg$currPos += 5;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parseId();
      if (s3 !== peg$FAILED) {
        s4 = peg$parseUniParams();
        if (s4 === peg$FAILED) {
          s4 = null;
        }
        s5 = peg$parse_();
        if (input.charCodeAt(peg$currPos) === 58) {
          s6 = peg$c2;
          peg$currPos++;
        } else {
          s6 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e2); }
        }
        if (s6 !== peg$FAILED) {
          s7 = peg$parse_();
          s8 = peg$parseTerm();
          if (s8 !== peg$FAILED) {
            peg$savedPos = s0;
            s0 = peg$f1(s3, s4, s8);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.substr(peg$currPos, 3) === peg$c3) {
        s1 = peg$c3;
        peg$currPos += 3;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e3); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        s3 = peg$parseId();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseUniParams();
          if (s4 === peg$FAILED) {
            s4 = null;
          }
          s5 = peg$parse_();
          s6 = peg$parseParameters();
          s7 = peg$parse_();
          if (input.charCodeAt(peg$currPos) === 58) {
            s8 = peg$c2;
            peg$currPos++;
          } else {
            s8 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e2); }
          }
          if (s8 !== peg$FAILED) {
            s9 = peg$parse_();
            s10 = peg$parseTerm();
            if (s10 !== peg$FAILED) {
              s11 = peg$parse_();
              if (input.substr(peg$currPos, 2) === peg$c4) {
                s12 = peg$c4;
                peg$currPos += 2;
              } else {
                s12 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e4); }
              }
              if (s12 !== peg$FAILED) {
                s13 = peg$parse_();
                s14 = peg$parseTerm();
                if (s14 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s0 = peg$f2(s3, s4, s6, s10, s14);
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        if (input.substr(peg$currPos, 9) === peg$c5) {
          s1 = peg$c5;
          peg$currPos += 9;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e5); }
        }
        if (s1 !== peg$FAILED) {
          s2 = peg$parse_();
          s3 = peg$parseId();
          if (s3 !== peg$FAILED) {
            s4 = peg$parseUniParams();
            if (s4 === peg$FAILED) {
              s4 = null;
            }
            s5 = peg$parse_();
            s6 = peg$parseParameters();
            s7 = peg$parse_();
            if (input.charCodeAt(peg$currPos) === 58) {
              s8 = peg$c2;
              peg$currPos++;
            } else {
              s8 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e2); }
            }
            if (s8 !== peg$FAILED) {
              s9 = peg$parse_();
              s10 = peg$parseTerm();
              if (s10 !== peg$FAILED) {
                s11 = peg$parse_();
                if (input.substr(peg$currPos, 5) === peg$c6) {
                  s12 = peg$c6;
                  peg$currPos += 5;
                } else {
                  s12 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$e6); }
                }
                if (s12 !== peg$FAILED) {
                  s13 = peg$parse_();
                  s14 = [];
                  s15 = peg$parseConstructor();
                  if (s15 !== peg$FAILED) {
                    while (s15 !== peg$FAILED) {
                      s14.push(s15);
                      s15 = peg$parseConstructor();
                    }
                  } else {
                    s14 = peg$FAILED;
                  }
                  if (s14 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s0 = peg$f3(s3, s4, s6, s10, s14);
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          if (input.substr(peg$currPos, 6) === peg$c7) {
            s1 = peg$c7;
            peg$currPos += 6;
          } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e7); }
          }
          if (s1 !== peg$FAILED) {
            s2 = peg$parse_();
            s3 = peg$parseId();
            if (s3 !== peg$FAILED) {
              s4 = peg$parseUniParams();
              if (s4 === peg$FAILED) {
                s4 = null;
              }
              s5 = peg$parse_();
              s6 = peg$parseParameters();
              s7 = peg$parse_();
              if (input.charCodeAt(peg$currPos) === 58) {
                s8 = peg$c2;
                peg$currPos++;
              } else {
                s8 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e2); }
              }
              if (s8 !== peg$FAILED) {
                s9 = peg$parse_();
                s10 = peg$parseTerm();
                if (s10 !== peg$FAILED) {
                  s11 = peg$parse_();
                  if (input.substr(peg$currPos, 5) === peg$c6) {
                    s12 = peg$c6;
                    peg$currPos += 5;
                  } else {
                    s12 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$e6); }
                  }
                  if (s12 !== peg$FAILED) {
                    s13 = peg$parse_();
                    s14 = [];
                    s15 = peg$parseField();
                    if (s15 !== peg$FAILED) {
                      while (s15 !== peg$FAILED) {
                        s14.push(s15);
                        s15 = peg$parseField();
                      }
                    } else {
                      s14 = peg$FAILED;
                    }
                    if (s14 !== peg$FAILED) {
                      peg$savedPos = s0;
                      s0 = peg$f4(s3, s4, s6, s10, s14);
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        }
      }
    }

    return s0;
  }

  function peg$parseUniParams() {
    let s0, s1, s2, s3, s4, s5;
